package de.olegrom.postbook.presentation.utils

object TestTag {
    const val appBarTitle = "App Bar Title"
    const val postCard = "Post Card"
    const val commentCard = "Comment Card"
    const val inputField = "UserId Input Field"
    const val loginButton = "Login Button"
}